rightHeaderMenu correct z-index

--- a/assets/stylesheets/scss/_pard.erb.scss
+++ b/assets/stylesheets/scss/_pard.erb.scss
@@ -1939,6 +1939,7 @@ inside header
   position: absolute;
   right: 0;
   top: .7rem;
+  z-index: 2;
   .rightMenu-navHeader{
     margin: 0;
     li{
